# DSSketch

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  DATA_CUSTOMIZATION.md  MANIFEST.in  Makefile  NEXT_STEPS.md  PERFORMANCE.md  README.md  REFACTORING_PLAN.md  dsl-converter-spec.md  dsl-converter.py  dsl-correct-mapping.md  dssketch.py  dssketch_cli.py  dssketch_data_cli.py  parser_robustness_summary.md  pyproject.toml  requirements.txt
.github/workflows/: auto-version-minor.yml  auto-version-patch.yml
data/: unified-mappings.json  unified-mappings.yaml
examples/: AmstelvarA2-Roman_avar2.dssketch  FontWithLayers.dssketch  MegaFont-3x5x7x3-Variable.designspace  MegaFont-WithSkip.designspace  MegaFont-WithSkip.dssketch  RobotoDelta-Roman.dssketch  TestFont-ElidableScenarios.designspace  TestFont-ElidableScenarios.dssketch  TestFont-MultiElidable.designspace  TestFont-MultiElidable.dssketch  TestFont-Skip.designspace  TestFont-Skip.dssketch  TestFont-SkipValidation.designspace  TestFont-SkipValidation.dssketch  avar1.designspace  avar1.dssketch  avar2.designspace  avar2.dssketch  avar2Fences.designspace  avar2Fences.dssketch  avar2OpticalSize.designspace  avar2OpticalSize.dssketch  avar2QuadraticRotation-Copy.designspace  avar2QuadraticRotation-Copy.dssketch  avar2QuadraticRotation.designspace  avar2QuadraticRotation.dssketch
notes/: axis-display-name-plan.md  hidden-axes-detection-plan.md  named-coordinates-plan.md
src/: dsl-converter.py
src/dssketch/: __init__.py  api.py  cli.py  config.py  config.py.bak  data_cli.py
src/dssketch/converters/: __init__.py  designspace_to_dss.py  dss_to_designspace.py
src/dssketch/core/: instances.py  mappings.py  models.py  validation.py
src/dssketch/data/: discrete-axis-labels.yaml  font-resources-translations.json  stylenames.json
src/dssketch/parsers/: __init__.py  dss_parser.py
src/dssketch/utils/: conditions.py  discrete.py  dss_validator.py  logging.py  patterns.py
src/dssketch/writers/: dss_writer.py
tests/: test_custom_discrete_axis.py  test_sparse_master.py
